[po-123] fix select css bug on firefox when selecting a target profile

--- a/orga/app/styles/globals/forms.scss
+++ b/orga/app/styles/globals/forms.scss
@@ -17,7 +17,6 @@
 
 .select {
   font-size: 1rem;
-  padding: 20px;
   border: 2px $alto solid;
   height: 46px;
   background-color: white;
